DevTools: Do not record nested FunctionCall events.

BUG=593991

Review URL: https://codereview.chromium.org/1911243002

Cr-Commit-Position: refs/heads/master@{#389664}

Former-commit-id: 0d984b7d76cd1945834793344888127c16879ee7